# Openbiometrics-

./: .flake8  .gitignore  CMakeLists.txt  README.md  consent.example.json  openbiometrics.py
.github/workflows/: ci.yml  release.yml
AI/implementation_assistance/: ARCHITECTURE.md  README.md
Nicole/: __init__.py  runner.py  task_schema.py
docs/: QA.md  SeatOfLife.md  White paper.md  architecture.md  build-linux.md  build-windows.md  data-policy.md  ethics.md  threat-model.md
src/: main.c
src/cli/obx/: SessionMeta.cpp  SessionMeta.hpp  main.cpp
src/collector/: AudioCapture.cpp  AudioCapture.hpp  VideoCapture.cpp  VideoCapture.hpp
src/processing/: QualityCheck.cpp  QualityCheck.hpp
tests/: test_adult_gate.py  test_gate.py
tools/qa/: qa.py
tools/seat_of_life/: snapshot.py
